--- a/src/Winhance.WPF/Features/SoftwareApps/Views/WindowsAppsHelpContent.xaml
+++ b/src/Winhance.WPF/Features/SoftwareApps/Views/WindowsAppsHelpContent.xaml
@@ -4,24 +4,55 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d"
-             Width="600"
-             MaxHeight="450">
+             mc:Ignorable="d">
     
-    <Border Background="{DynamicResource ContentSectionBorderBrush}"
-            BorderBrush="{DynamicResource ButtonBorderBrush}"
+    <!-- Flyout Help Content -->
+    <Border Background="{DynamicResource WindowBackground}"
+            BorderBrush="#505050"
             BorderThickness="1"
-            CornerRadius="5"
-            Padding="15,10">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+            CornerRadius="4"
+            Padding="15,10"
+            MinWidth="500"
+            MaxWidth="600"
+            MaxHeight="450"
+            Effect="{StaticResource LightShadowEffect}">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                
+                <!-- Header -->
+                <Grid Grid.Row="0" Margin="0,0,0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock Grid.Column="0"
+                               Text="Windows Apps Help"
+                               FontSize="16"
+                               FontWeight="SemiBold"
+                               Foreground="{DynamicResource PrimaryTextColor}"
+                               VerticalAlignment="Center"/>
+                    
+                    <Button Grid.Column="1"
+                            x:Name="CloseButton"
+                            Style="{StaticResource IconButtonStyle}"
+                            Width="24"
+                            Height="24"
+                            Padding="0"
+                            ToolTip="Close Help"
+                            Command="{Binding CloseHelpCommand}">
+                        <materialDesign:PackIcon Kind="Close" Width="16" Height="16"/>
+                    </Button>
+                </Grid>
             
-            <!-- Status Indicators -->
-            <Grid Grid.Row="1" Margin="0,5,0,15">
+                <!-- Status Indicators -->
+                <Grid Grid.Row="1" Margin="0,5,0,15">
                 <StackPanel>
                     
                     <StackPanel Orientation="Horizontal"
@@ -211,10 +242,10 @@
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
-            </Grid>
-            
-            <!-- Info Text -->
-            <Grid Grid.Row="2">
+                </Grid>
+                
+                <!-- Info Text -->
+                <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -229,7 +260,8 @@
                            TextWrapping="Wrap"
                            Margin="0,0,0,0"
                            Text="Click on an active Winhance removal status icon above to delete the script and task associated with it.&#x0a;&#x0a;Check all the items you don't want on your PC (even not installed items). Windows might try to add them back later, but Winhance will keep removing them for you.&#x0a;&#x0a;Use the Search Box to find settings quickly. The Save and Import Config buttons in the main window help you manage your preferred selections."/>
+                </Grid>
             </Grid>
-        </Grid>
+        </ScrollViewer>
     </Border>
 </UserControl>
